--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@headlessui/react": "^1.7.18",
     "@nanostores/react": "^0.7.2",
     "@nanostores/router": "^0.13.0",
-    "@turf/turf": "^6.5.0",
+    "@turf/turf": "^7.0.0-alpha.114",
+    "immutable": "^5.0.0-beta.5",
     "maplibre-gl": "^4.1.1",
     "pmtiles": "^3.0.5",
     "react": "^18.2.0",
@@ -22,14 +23,19 @@
     "tailwind-merge": "^2.2.2"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.10",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
   }
