--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nanostores/router": "^0.13.0",
     "@turf/turf": "^7.0.0-alpha.114",
     "maplibre-gl": "^4.1.1",
+    "matomo-lite-tracker": "github:Findus23/MatomoLiteTracker",
     "pmtiles": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
